--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
+.sticky-header {
+  transition: 0.3s all ease-out;
+  padding: 0.8rem 1.5rem;
+}
+.sticky-header nav ul li a {
+  font-size: 14px;
+}
+.sticky-header img {
+  height: 2rem;
+}
+
 #igfeed .flickity-page-dots {
     position: absolute;
     width: 100%;
