--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
+html {
+  scroll-behavior: smooth;
+}
 .sticky-header {
   transition: 0.3s all ease-out;
   padding: 0.8rem 1.5rem;
